'vh' to 'svh' bug fix when loading PWA on iOS

--- a/src/staff/attendance/AttendanceUpdate.scss
+++ b/src/staff/attendance/AttendanceUpdate.scss
@@ -42,7 +42,7 @@ $grey: #3a3939;
 
     width: calc(100vw - 2rem);
     max-width: 550px;
-    height: calc(100vh - 2rem);
+    height: calc(100svh - 2rem);
     max-height: 1020px;
 
     border-radius: 0.5rem;
