--- a/src/staff/students/StudentProfilesDetails/JournalArchive.scss
+++ b/src/staff/students/StudentProfilesDetails/JournalArchive.scss
@@ -25,7 +25,7 @@ $grey: #3a3939;
   #archive-journal-card {
     width: calc(100vw - 1rem);
     max-width: calc(550px - 1rem);
-    max-height: calc(100vh - 2rem);
+    max-height: calc(100svh - 2rem);
 
     pointer-events: auto;
     cursor: default;
